# voxeye

./: .gitignore  CHANGELOG.md  OWNERSHIP.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: .env.example  01_explicit_name.py  02_worker_agent_name.py  03_unknown_reconciled.py  04_name_from_class.py  05_redaction.py  README.md  _demo_common.py  end_to_end_smoke.py
src/voxeye/: __init__.py  _lifecycle.py  _redaction.py  _resolve.py  _tracer.py  constants.py
tests/: conftest.py  test_hardening_tracer.py  test_lifecycle.py  test_redaction.py  test_resolve.py  test_tracer.py
